Pluralize subject terms

--- a/cn-cu-eng.html
+++ b/cn-cu-eng.html
@@ -15,7 +15,7 @@
 <link rel="schema.dc" href="http://purl.org/dc/terms/" />
 
 <meta name="dc.title" content="Contact Us - EGD - PWGSC" />
-<meta name="dc.subject" scheme="gccore" content="Ship; Wharf; Communications; Information" />
+<meta name="dc.subject" scheme="gccore" content="Ships; Wharfs; Communications; Information" />
 
 <meta name="dc.language" scheme="ISO639-2/T" content="eng" />
 <meta name="dc.creator" content="Government of Canada, Public Works and Government Services Canada" />
