--- a/dimensions-eng.html
+++ b/dimensions-eng.html
@@ -15,7 +15,7 @@
 <link rel="schema.dc" href="http://purl.org/dc/terms/" />
 
 <meta name="dc.title" content="About the Dock - EGD - PWGSC" />
-<meta name="dc.subject" scheme="gccore" content="Ship; Wharf; Measurement" />
+<meta name="dc.subject" scheme="gccore" content="Ships; Wharfs; Measurement" />
 
 <meta name="dc.language" scheme="ISO639-2/1T" content="eng" />
 <meta name="dc.creator" content="Government of Canada, Public Works and Government Services Canada" />
