--- a/entreprises-firms-eng.html
+++ b/entreprises-firms-eng.html
@@ -17,8 +17,8 @@
 <link rel="schema.dc" href="http://purl.org/dc/elements/1.1/" />
 <link rel="schema.dc" href="http://purl.org/dc/terms/" />
 
-<meta name="dc.title" content="Ship Repair Firms - EGD - PWGSC" />
-<meta name="dc.subject" scheme="gccore" content="Ship; Wharf; Maintenance" />
+<meta name="dc.title" content="Ships Repair Firms - EGD - PWGSC" />
+<meta name="dc.subject" scheme="gccore" content="Ships; Wharfs; Maintenance" />
 
 <meta name="dc.language" scheme="ISO639-2/T" content="eng" />
 <meta name="dc.creator" content="Government of Canada, Public Works and Government Services Canada" />
