--- a/env/initiatives-eng.html
+++ b/env/initiatives-eng.html
@@ -15,7 +15,7 @@
 <link rel="schema.dc" href="http://purl.org/dc/terms/" />
 
 <meta name="dc.title" content="Environmental Initiatives - EGD - PWGSC" />
-<meta name="dc.subject" scheme="gccore" content="Ship; Wharf; Environment; Environmental policy; Environmental programs; Air quality; Water management; Waste management; Dangerous products; Energy conservation; Nature conservation" />
+<meta name="dc.subject" scheme="gccore" content="Ships; Wharfs; Environment; Environmental policy; Environmental programs; Air quality; Water management; Waste management; Dangerous products; Energy conservation; Nature conservation" />
 
 <meta name="dc.language" scheme="ISO639-2/T" content="eng" />
 <meta name="dc.creator" content="Government of Canada, Public Works and Government Services Canada" />
