--- a/ser/reparation-repair-eng.html
+++ b/ser/reparation-repair-eng.html
@@ -14,8 +14,8 @@
 <link rel="schema.dc" href="http://purl.org/dc/elements/1.1/" />
 <link rel="schema.dc" href="http://purl.org/dc/terms/" />
 
-<meta name="dc.title" content="Ship Repair Services - CSE - PWGSC" />
-<meta name="dc.subject" scheme="gccore" content="Ship; Wharf; Maintenance; Equipment; " />
+<meta name="dc.title" content="Ships Repair Services - CSE - PWGSC" />
+<meta name="dc.subject" scheme="gccore" content="Ships; Wharfs; Maintenance; Equipment; " />
 
 <meta name="dc.language" scheme="ISO639-2/T" content="eng" />
 <meta name="dc.creator" content="Government of Canada, Public Works and Government Services Canada" />
