--- a/conduite-conduct-eng.html
+++ b/conduite-conduct-eng.html
@@ -15,7 +15,7 @@
 <link rel="schema.dc" href="http://purl.org/dc/terms/" />
 
 <meta name="dc.title" content="Code of Conduct - EGD - PWGSC" />
-<meta name="dc.subject" scheme="gccore" content="Ship; Wharf; Ethics" />
+<meta name="dc.subject" scheme="gccore" content="Ships; Wharfs; Ethics" />
 
 <meta name="dc.language" scheme="ISO639-2/T" content="eng" />
 <meta name="dc.creator" content="Government of Canada, Public Works and Government Services Canada" />
