--- a/env/gestion-management-eng.html
+++ b/env/gestion-management-eng.html
@@ -15,7 +15,7 @@
 <link rel="schema.dc" href="http://purl.org/dc/terms/" />
 
 <meta name="dc.title" content="Environmental Management - EGD - PWGSC" />
-<meta name="dc.subject" scheme="gccore" content="Ship; Wharf; Environment; Best practices; Training; Awareness; Participation; Environmental impact assessment" />
+<meta name="dc.subject" scheme="gccore" content="Ships; Wharfs; Environment; Best practices; Training; Awareness; Participation; Environmental impact assessment" />
 
 <meta name="dc.language" scheme="ISO639-2/T" content="eng" />
 <meta name="dc.creator" content="Government of Canada, Public Works and Government Services Canada" />
