--- a/env/simple-eng.html
+++ b/env/simple-eng.html
@@ -14,7 +14,7 @@
 <link rel="schema.dc" href="http://purl.org/dc/terms/" />
 
 <meta name="dc.title" content="Keeping It Simple - EGD - PWGSC" />
-<meta name="dc.subject" scheme="gccore" content="Ship; Wharf; Environnment; Information;  Index" />
+<meta name="dc.subject" scheme="gccore" content="Ships; Wharfs; Environnment; Information;  Index" />
 
 <meta name="dc.language" scheme="ISO639-2/T" content="eng" />
 <meta name="dc.creator" content="Government of Canada, Public Works and Government Services Canada" />
