--- a/env/barrage-boom-eng.html
+++ b/env/barrage-boom-eng.html
@@ -14,7 +14,7 @@
 <link rel="schema.dc" href="http://purl.org/dc/terms/" />
 
 <meta name="dc.title" content="Lowering the Boom on Oil Spills - EGD - PWGSC" />
-<meta name="dc.subject" scheme="gccore" content="Ships; Wharfs; Environment; Information;  Index" />
+<meta name="dc.subject" scheme="gccore" content="Ships; Wharfs; Environment; Information;  Indexes" />
 
 <meta name="dc.language" scheme="ISO639-2/T" content="eng" />
 <meta name="dc.creator" content="Government of Canada, Public Works and Government Services Canada" />
