More meta term updates

--- a/env/programme-program-fra.html
+++ b/env/programme-program-fra.html
@@ -15,7 +15,7 @@
 <link rel="schema.dc" href="http://purl.org/dc/terms/" />
 
 <meta name="dc.title" content="Programme environnemental - CSE - TPSGC" />
-<meta name="dc.subject" scheme="gccore" content="Navire; Quai; Programme relatif à l'environnement; Environnement; Politique environnementale; Qualité de l'air; Gestion de l'eau; Gestion des déchets; Produit dangereux; Conservation de l'énergie; Conservation de la nature" />
+<meta name="dc.subject" scheme="gccore" content="Navire; Quai; Programme relatif à l'environnement; Environnement; Politique environnementale; Qualit&eacute; de l'air; Gestion de l'eau; Gestion des déchets; Mati&egrave;re dangereuse; Conservation de l'&eacute;nergie; Conservation de la nature" />
 
 <meta name="dc.language" scheme="ISO639-2/T" content="fra" />
 <meta name="dc.creator" content="Gouvernement du Canada, Travaux publics et Services gouvernementaux Canada" />
