--- a/env/initiatives-fra.html
+++ b/env/initiatives-fra.html
@@ -15,7 +15,7 @@
 <link rel="schema.dc" href="http://purl.org/dc/terms/" />
 
 <meta name="dc.title" content="Initiatives environnementales - CSE - TPSGC" />
-<meta name="dc.subject" scheme="gccore" content="Navire; Quai; Environnement; Politique environnementale; Programme relatif à l'environnement; Qualité de l'air; Gestion de l'eau; Gestion des déchets; Produit dangereux; Conservation de l'énergie; Conservation de la nature" />
+<meta name="dc.subject" scheme="gccore" content="Navire; Quai; Environnement; Politique environnementale; Programme relatif &agrave; l'environnement; Qualit&eacute; de l'air; Gestion de l'eau; Gestion des déchets; Mati&egrave;re dangereuse; Conservation de l'&eacute;nergie; Conservation de la nature" />
 
 <meta name="dc.language" scheme="ISO639-2/T" content="fra" />
 <meta name="dc.creator" content="Gouvernement du Canada, Travaux publics et Services gouvernementaux Canada" />
