--- a/historique-history-fra.html
+++ b/historique-history-fra.html
@@ -15,7 +15,7 @@
 <link rel="schema.dc" href="http://purl.org/dc/terms/" />
 
 <meta name="dc.title" content="Historique - CSE - TPSGC" />
-<meta name="dc.subject" scheme="gccore" content="Navire; Quai; Historique" />
+<meta name="dc.subject" scheme="gccore" content="Navire; Quai; Histoire" />
 
 <meta name="dc.language" scheme="ISO639-2/T" content="fra" />
 <meta name="dc.creator" content="Gouvernement du Canada, Travaux publics et Services gouvernementaux Canada" />
