--- a/his/article-fra.html
+++ b/his/article-fra.html
@@ -15,7 +15,7 @@
 <link rel="schema.dc" href="http://purl.org/dc/terms/" />
 
 <meta name="dc.title" content="Article sur le QE - CSE - TPSGC" />
-<meta name="dc.subject" scheme="gccore" content="Navire; Quai; Histoire; Navire de croisière; Sécurité" />
+<meta name="dc.subject" scheme="gccore" content="Navire; Quai; Histoire; Navire de croisière" />
 
 <meta name="dc.language" scheme="ISO639-2/T" content="fra" />
 <meta name="dc.creator" content="Gouvernement du Canada, Travaux publics et Services gouvernementaux Canada" />
