Fix broken link

--- a/cn-cu-fra.html
+++ b/cn-cu-fra.html
@@ -182,7 +182,7 @@
 					selon les calendriers de conservation et de disposition &eacute;tablis pour
 					ces fichiers.</p>
 				<p>Vos renseignements personnels sont prot&eacute;g&eacute;s en vertu des
-					dispositions de la <a href="http://laws-lois.justice.gc.ca/fr/acts/P-21/index.html"><em>Loi
+					dispositions de la <a href="http://laws-lois.justice.gc.ca/fra/acts/P-21/index.html"><em>Loi
 					sur la protection des renseignements personnels</em></a>. De plus, conform&eacute;ment
 					aux dispositions de cette loi, vous avez le droit de demander d'acc&eacute;der &agrave; vos
 					renseignements personnels et d'y apporter des modifications s'ils sont erron&eacute;s
