--- a/index-eng.html
+++ b/index-eng.html
@@ -106,8 +106,7 @@
 							pockets and high-speed heavy lift cranes up
 							to 150 tonnes/165 tons. The Dock can accommodate vessels up to 100,000
 							DWT or about 90% of the world's ships.</p>
-					<p>The EGD is <a href="https://cse-egd.tpsgc-pwgsc.gc.ca/reserve-book-eng.cfm">available
-							to any company or individual</a> on a first-come first-serve basis. All
+					<p>The EGD is <a href="https://cse-egd.tpsgc-pwgsc.gc.ca/reserve-book-eng.cfm">available to any company or individual</a> on a first-come first-serve basis. All
 							work is carried out by private sector <a href="entreprises-firms-eng.html">ship repair
 							firms</a>. </p>
 				</div>
