Fix broken links

--- a/env/gestion-management-fra.html
+++ b/env/gestion-management-fra.html
@@ -128,7 +128,7 @@
 						de la peinture et la pr&eacute;paration de surface, le peinturage, l'entretien
 						de moteurs et la manutention de mat&eacute;riaux. </p>
 					<div style="text-align: center;"><img src="../images/barils-bache-drums-tarp.jpg" alt="MPGE - Barils pour le transport des eaux us&eacute;es; MPGE - B&acirc;ches &agrave; peinture" width="402" height="131" /></div>
-					<p>Pour Consulter une <a href="mpge-ebmp-fra.html">fiche r&eacute;capitulative des <acronym title="meilleures pratiques de gestion de l'environnement">MPGE</acronym></a>.</p>
+					<p>Pour Consulter une fiche r&eacute;capitulative des <acronym title="meilleures pratiques de gestion de l'environnement">MPGE</acronym>.</p>
 					<div class="topPage"> <a href="#tphp" title="Retourner au haut de la page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
 						Haut de la page</a> </div>
 				</div>
