Change all modified dates

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<meta name="dc.publisher" content="Gouvernement du Canada, Travaux publics et Services gouvernementaux Canada" />
 
 	<meta name="dcterms.issued" scheme="W3CDTF" content="2007-09-20" />
-	<meta name="dcterms.modified" scheme="W3CDTF" content="<!--#config timefmt='%Y-%m-%d'--><!--#echo var='LAST_MODIFIED'-->" />
+	<meta name="dcterms.modified" scheme="W3CDTF" content="2011-12-16" />
 
 	<meta name="description" content="The Esquimalt Graving Dock, or EGD, is proud to be federally owned, operated, and maintained. EGD is the largest solid-bottom commercial drydock on the West Coast of the Americas. We are located in an ice free harbour on Vancouver Island near gateways to Alaska and the Pacific Rim." />
 	<meta name="description" content="La Cale seche d'Esquimalt (CSE) est la plus importante forme de radoub commerciale de la cote Ouest des Ameriques. Nous sommes situes dans un port ouvert a l'annee longue, sur l'ile de Vancouver, a proximite des voies d'acces a l'Alaska et aux pays riverains du Pacifique." />
