Fix core subject terms, missed some files earlier

--- a/env/politique-policy-eng.html
+++ b/env/politique-policy-eng.html
@@ -14,7 +14,7 @@
 <link rel="schema.dc" href="http://purl.org/dc/terms/" />
 
 <meta name="dc.title" content="Environmental Policy Statement - EGD - PWGSC" />
-<meta name="dc.subject" scheme="gccore" content="Ship; Wharf; Environmental policy; Statements" />
+<meta name="dc.subject" scheme="gccore" content="Ships; Wharfs; Environmental policy; Statements" />
 
 <meta name="dc.language" scheme="ISO639-2/T" content="eng" />
 <meta name="dc.creator" content="Government of Canada, Public Works and Government Services Canada" />
