--- a/index-fra.html
+++ b/index-fra.html
@@ -15,7 +15,7 @@
 <link rel="schema.dc" href="http://purl.org/dc/terms/" />
 
 <meta name="dc.title" content="Bienvenue - Cale s&egrave;che d'Esquimalt (CSE - TPSGC)" />
-<meta name="dc.subject" scheme="gccore" content="Navire; Quai; Index" />
+<meta name="dc.subject" scheme="gccore" content="Navire; Quai; Indexes" />
 
 <meta name="dc.language" scheme="ISO639-2/T" content="fra" />
 <meta name="dc.creator" content="Gouvernement du Canada, Travaux publics et Services gouvernementaux Canada" />
