--- a/env/interet-interest-fra.html
+++ b/env/interet-interest-fra.html
@@ -15,7 +15,7 @@
 <link rel="schema.dc" href="http://purl.org/dc/terms/" />
 
 <meta name="dc.title" content="Articles d'Int&eacute;r&ecirc;t - CSE - TPSGC" />
-<meta name="dc.subject" scheme="gccore" content="Navire; Quai; Environnement; Information;  Index" />
+<meta name="dc.subject" scheme="gccore" content="Navire; Quai; Environnement; Information;  Indexes" />
 
 <meta name="dc.language" scheme="ISO639-2/T" content="fra" />
 <meta name="dc.creator" content="Gouvernement du Canada, Travaux publics et Services gouvernementaux Canada" />
