--- a/his/ensemble-eng.html
+++ b/his/ensemble-eng.html
@@ -15,7 +15,7 @@
 <link rel="schema.dc" href="http://purl.org/dc/terms/" />
 
 <meta name="dc.title" content="Ensemble Article - EGD - PWGSC" />
-<meta name="dc.subject" scheme="gccore" content="Ship; Wharf; History; Commemoration" />
+<meta name="dc.subject" scheme="gccore" content="Ships; Wharfs; History; Commemoration" />
 
 <meta name="dc.language" scheme="ISO639-2/T" content="eng" />
 <meta name="dc.creator" content="Government of Canada, Public Works and Government Services Canada" />
