--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<link rel="schema.dc" href="http://purl.org/dc/terms/ " />
 
 	<meta name="dc.title" content="Cale s&egrave;che e'Esquimalt | Esquimalt Graving Dock" />
-	<meta name="dc.subject" scheme="gccore" content="Ship; Wharf" />
+	<meta name="dc.subject" scheme="gccore" content="Ships; Wharf" />
 	<meta name="dc.subject" scheme="gccore" content="Navire; Quai" />
 
 	<meta name="dc.language" scheme="ISO639-2/T" content="eng" />
